infra/samhstn/nat-gateway.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  Creates a NAT Gateway for a PrivateSubnet,
  this allows ssm access to ec2 instances within the subnet.
  Note - Ensure to delete this stack when finished, NAT instances are expensive.

Parameters:
  VPC:
    Type: String
  SubnetAZ1:
    Type: String
  SubnetAZ2:
    Type: String
  PrivateSubnetAZ1:
    Type: String
  PrivateSubnetAZ2:
    Type: String
  StackName:
    Type: String

Resources:
  EIPAZ1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EIPAZ2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGatewayAZ1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPAZ1.AllocationId
      SubnetId: !Ref SubnetAZ1
      Tags:
        - Key: Name
          Value: !Ref StackName
        - Key: AZ
          Value: !Select [0, !GetAZs '']

  NATGatewayAZ2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPAZ2.AllocationId
      SubnetId: !Ref SubnetAZ2
      Tags:
        - Key: Name
          Value: !Ref StackName
        - Key: AZ
          Value: !Select [1, !GetAZs '']

  PrivateSubnetRouteTableAZ1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref StackName
        - Key: AZ
          Value: !Select [0, !GetAZs '']

  PrivateSubnetRouteTableAZ2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref StackName
        - Key: AZ
          Value: !Select [1, !GetAZs '']

  PrivateRouteAZ1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZ1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayAZ1

  PrivateRouteAZ2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZ2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayAZ2

  PrivateSubnetRouteTableAssociationAZ1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZ1
      SubnetId: !Ref PrivateSubnetAZ1

  PrivateSubnetRouteTableAssociationAZ2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTableAZ2
      SubnetId: !Ref PrivateSubnetAZ2
